launcher/src/app.css
@import "tailwindcss";
@plugin "@tailwindcss/forms";
@plugin "@tailwindcss/typography";

@import "@skeletonlabs/skeleton";
@import "@skeletonlabs/skeleton/themes/cerberus";
@import "@skeletonlabs/skeleton/themes/concord";
@import "@skeletonlabs/skeleton/themes/fennec";
@import "./wasp";

@custom-variant dark (&:where(.dark, .dark *));

@import "@skeletonlabs/skeleton-svelte";

@layer utilities {
	/* Hide scrollbar for Chrome, Safari and Opera */
	.hide-scrollbar::-webkit-scrollbar {
		display: none;
	}
	/* Hide scrollbar for IE, Edge and Firefox */
	.hide-scrollbar {
		-ms-overflow-style: none; /* IE and Edge */
		scrollbar-width: none; /* Firefox */
	}
}

html.dark .shiki,
html.dark .shiki span {
	color: var(--shiki-dark) !important;
	background-color: var(--shiki-dark-bg) !important;
	/* Optional, if you also want font styles */
	font-style: var(--shiki-dark-font-style) !important;
	font-weight: var(--shiki-dark-font-weight) !important;
	text-decoration: var(--shiki-dark-text-decoration) !important;
}

dialog,
dialog::backdrop {
	--anim-duration: 250ms;
	transition:
		display var(--anim-duration) allow-discrete,
		overlay var(--anim-duration) allow-discrete,
		opacity var(--anim-duration);
	opacity: 0;
}
/* Animate In */
dialog[open],
dialog[open]::backdrop {
	opacity: 1;
}
/* Animate Out */
@starting-style {
	dialog[open],
	dialog[open]::backdrop {
		opacity: 0;
	}
}

